Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18380

Adjust max_statement_time along with timeouts

Details

    Description

      MariaBackup already adjusts some options which can affect proper execution, e.g. lock_wait_timeout and some others. I think max_statement_time should be among them, I'm quite often getting

      Error: failed to execute query FLUSH NO_WRITE_TO_BINLOG TABLES: Query execution was interrupted (max_statement_time exceeded)
      

      in the tests.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.