MDEV-18380 : adjust max_statement_time in mariabackup